manifests/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    k8s-app: __appname__
  name: __appname__
spec:
  type: NodePort
  ports:
    - name: web
      port: __serviceport__
      targetPort: __containerport__
  selector:
    k8s-app: __appname__
